fix(yalb-1319): decrease gap size landscape orientation

--- a/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
+++ b/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
@@ -108,7 +108,7 @@ $modal-speed: var(--animation-speed-slow);
       )
       minmax(0, 1fr)
       var(--size-click-target-minimum);
-    gap: var(--size-spacing-5);
+    gap: var(--size-spacing-2);
   }
 }
 
